# rcc

./: .gitignore  Cargo.toml  define  test.c
doc/: lex.md  lex.txt  number_idnet.dot  string_char.dot  symbol.dot  syntax.md
parser/: Cargo.toml  lib.rs
parser/examples/: test.rs
src/: ir.rs  lexer.rs  main.rs  parser.rs  preprocessor.rs  syntax.rs
src/ir/: mod.rs  op.rs  types.rs
src/lexer/: mod.rs  token.rs
