[package]
name = "rcc"
version = "0.2.0"
description = "A C compiler written in Rust."
keywords = ["c", "compiler"]
license = "MIT"
authors = ["韩朴宇 <w12101111@gmail.com>"]
repository = "https://github.com/12101111/rcc"
homepage = "https://github.com/12101111/rcc"
edition = "2018"

[dependencies]
parser = { path = "./parser" ,features = ["slr"]}

[workspace]
members = [
    ".",
    "parser",
]