[package]
name = "parser"
version = "0.2.0"
description = "LR parser for rcc."
license = "MIT"
authors = ["韩朴宇 <w12101111@gmail.com>"]
repository = "https://github.com/12101111/rcc"
homepage = "https://github.com/12101111/rcc"
edition = "2018"
[lib]
proc-macro = true
path = "lib.rs"
[dependencies]
syn = { version = "*", features = ["full","extra-traits"] }
proc-macro2 = "*"
quote = "*"
cfg-if = "0.1"
[features]
slr = []
lr1 = []
lalr = []